--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     </p>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 -->
                                 <h2>2016 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
@@ -296,16 +296,27 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <td colspan="2">
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<a href="https://www.facebook.com/media/set/?set=a.1189767147754893.1073741832.171859949545623&type=1&l=1b7f3c7d6d" target="_blank">
+<h4 align="center"?>
+Click here for photos of the Bow Wows and Meow's pet fair!
+</h4>
+<p align="center">
+<img src="images/2016bowwows.png"/>
+</p>
+</a>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                     <p align="center">
                                         <video id="goose" controls autoplay muted poster="Zoo/Geese.png">
-                                            <source src="Zoo/Geese.m4v" type="video/mp4"
+                                            <source src="Zoo/Geese.m4v" type="video/mp4">
                                             March on over to William S. Hart Park!
                                         </video>
                                     </p>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                     <h3 align="center">Join in the fun by<br><a href="The_Friends/membership.html">
                                     joining The Friends of Hart Park</a>!</h3></td>
                                         <!--
