Changes made from FL for the holidays.

--- a/index.htm
+++ b/index.htm
@@ -265,37 +265,31 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Saturday &amp; Sunday, Oct. 15-16</td>
-                                      <td id="Event">
-                                      <a href="Event_Pages/artist2016.png" rel="lightbox[art]">
-                                      Santa Clarita Artists Association Art Classic</a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Saturday, Nov. 5<sup>th</sup></td>
-                                      <td id="Event">
-                                      <a href="Event_Pages/rose2016.png" rel="lightbox[rose]">
-                                        "Wild West" Rose Show
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Saturday &amp; Sunday, Nov. 26-27, 10am-4pm</td>
                                       <td id="Event">
                                       <a href="Event_Pages/2016HartHolidayBoutique.png" rel="lightbox[boutique]">
                                       Hart Holiday Boutique &amp; Craft Fair
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">Saturday, Dec. 3<sup>rd</sup></td>
                                       <td id="Event">
+                                      <a href="Event_Pages/2016CowboysAndCarols.jpg" rel="lightbox[carols]">
                                       Cowboys &amp; Carols
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
                                     <td colspan="2">
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<a href="Event_Pages/2016CowboysAndCarols.jpg" rel="lightbox[carols]">
+<p align="center">
+<img src="images/HappyHolidays.png"/>
+</p>
+</a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <a href="https://www.facebook.com/media/set/?set=a.1189767147754893.1073741832.171859949545623&type=1&l=1b7f3c7d6d" target="_blank">
 <h4 align="center"?>
