--- a/index.html
+++ b/index.html
@@ -258,12 +258,16 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 -->
-                                <h2>2016 Calendar of Events</h2>
+                                <h2>2017 Calendar of Events</h2>
+                                <h4>Stay tuned for all our upcoming events in the new year!</h4>
+                                <!--
                                 <h3>Click on links as details become available</h3>
+                                -->
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
+                                    <!--
                                     <tr>
                                       <td id="EventDate">Saturday &amp; Sunday, Nov. 26-27, 10am-4pm</td>
                                       <td id="Event">
@@ -280,12 +284,12 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       </a>
                                       </td>
                                     </tr>
+                                    -->
                                     <tr>
                                     <td colspan="2">
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<a href="Event_Pages/2016CowboysAndCarols.jpg" rel="lightbox[carols]">
 <p align="center">
 <img src="images/HappyHolidays.png"/>
 </p>
