Added Events for 2017, featuring cowboy festival and 2016 Cowboys and Carols.

--- a/Event_Pages/cowboyfest.html
+++ b/Event_Pages/cowboyfest.html
@@ -93,7 +93,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                   <td width="50">&nbsp;</td>
                   <td width="896">
                     <div class="TTL" align="center">
-                      <p style="margin-top: 0"><font color="#800000">2016
+                      <p style="margin-top: 0"><font color="#800000">2017
 
 
                           Santa Clarita Cowboy Festival</font></p>
@@ -191,7 +191,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                   <td valign="top" width="876">
                     <hr>
 <div id="titleside">
-<h2>The 2016 Santa Clarita Cowboy Festival will again be in William S. Hart&rsquo;s Park!</h2>
+<h2>The 2017 Santa Clarita Cowboy Festival will again be in William S. Hart&rsquo;s Park!</h2>
 </div>
 <!--------------------------------------------------------------------------------------- -->
 <div id="topside">
@@ -205,55 +205,42 @@ Seating is limited, so get your tickets to the fun right <a href="http://cowboyf
 </div>
 <!--------------------------------------------------------------------------------------- -->
 <div id="leftside">
-<p>Friday, Apr. 22<sup>nd</sup> at 8pm for $65</p>
-<a href="http://cowboyfestival.org/schedule/don-edwards-at-hart-mansion/" target="_blank">
-<h2>Don Edwards &mdash; The Man and His Music</h2></a>
-<small style="display: inline;"> (Opens a new window) </small>
-<a href="http://cowboyfestival.org/schedule/don-edwards-at-hart-mansion/" target="_blank">
-<img src="cowboyfest2016/DonEdwards.jpg" />
+<p>Friday, Apr. 21<sup>st</sup> at 8pm for $75</p>
+<a href="http://cowboyfestival.org/performers/dave-stamey/" target="_blank">
+<h2>Dave Stamey</h2></a>
+<a href="http://cowboyfestival.org/performers/dave-stamey/" target="_blank">
+<img src="cowboyfest2017/Dave-Stamey.jpg" />
 </a>
-<p>One of Western music's most celebrated artists gives a rare, intimate performance in 
-cowboy movie star William S. Hart's living room.</p>
 <p>
-An historian, author and musicologist, unusually well-versed in
-cowboy lore and musical traditions, Don brings a rare complement
-of knowing and loving his craft. Mostly though, there is the soul of
-a poet; a man who has never succumbed to the temptations of
-presenting a glamorized or romanticized version of the West.
-Edwards deals with bad weather, petty motivations, sadness, nostalgia and longing as parts of the landscape
-like any other.</p>
-<p>Don's rich, trail etched voice will take 
-you back to those lonely nights on the trail with his Grammy nominated songs of coyotes, 
-longhorns, drovers, outlaws, and lost romance.</p>
+Start your Cowboy Festival with the incredible Dave Stamey in his only full concert this weekend.
+<p>
+Dave has been a cowboy, a mule packer, a dude wrangler, and now heads the list of one of the most popular Western entertainers working today. Cowboys and Indians Magazine calls him "the Charley Russell of Western Music." The Western Music Association voted him "Entertainer of the Year" six times, "Male Performer of the Year" six times and "Songwriter of the Year" five times.  His "Vaquero Song" has been called one of the greatest Western songs of all time. True West Magazine named him "Best Living Western Solo Musician" three times and he has also received the prestigious "Will Rogers Award" from the Academy of Western Artists.
+<p>
+He's delighted audiences in twenty-three states and is now back in cowboy movie star <em>William S. Hart</em>'s mansion. Tour Hart's historic 10,000 square foot residence and then relax in his living room among his Remington's and Russell's for an evening of memorable music.
+<p>
+It's the perfect setting for Dave to paint pictures of the open range, sharing humorous stories from the trail and take you on a musical journey through rich, historical western songs of today and yesterday. Hear the west the way it should be sung and remembered.
 </div>
 <!--------------------------------------------------------------------------------------- -->
 <div id="rightside">
-<p>Saturday, Apr. 23<sup>rd</sup> at 8pm for $35</p>
+<p>Saturday, Apr. 22<sup>nd</sup> at 8pm for $45</p>
 <a href="http://cowboyfestival.org/schedule/wyatt-earp/" target="_blank">
-<h2>Wyatt Earp &mdash; the Life Behind the Legend</h2></a>
-<small style="display: inline;"> (Opens a new window) </small>
+<h2>Wyatt Earp is back!</h2></a>
 <a href="http://cowboyfestival.org/schedule/wyatt-earp/" target="_blank">
-<img src="cowboyfest2016/Casey-Wyatt.jpg" />
+<img src="cowboyfest2017/wyatt2.jpg" />
 </a>
-<p>Forget what you have seen in the movies about Wyatt Earp. New York Times best selling 
-author-historian Casey Tefertiller pulls back the curtain and reveals the <em>true story</em> of 
-this legendary Frontier Marshal.  Casey was nominated for a Pulitzer Prize for his 
-groundbreaking research and book &ldquo;Wyatt Earp: Life Behind The Legend&rdquo;</p>
+<p>Hearing your many requests, this year we are presenting TWO incredible authors whose dedicated research has uncovered even more of the <em>real true life story</em> of Wyatt Earp and his family.
 <p>
-      The real life Wyatt Earp was a close friend of western movie star William S. Hart and 
-      in fact was a pallbearer at the famous lawman's funeral. Enjoy a rare evening of real 
-      history in Bill Hart's Mansion living room, learning about Tombstone, Earps years spent 
-      right here in Los Angeles and his friendship with our own William S. Hart. 
-</p>
-<p><em>This is Casey's only Southern California appearance.</em></p>
+Author, lecturer and historian <em>Garner Palenske</em> spent 8 years chronicling the Earp's years in San Diego, where Wyatt bought property, established gambling houses, owned racehorses and became one of the main power brokers in the tightly controlled local gambling syndicate. He concentrated on making money, both legally and illegally.  Wyatt's walking a thin line with the law in San Diego is a fascinating, rough and tumble story that is often filled with controversy.
+<p>
+<em>Nicholas Cataldo</em> is a past President of the San Bernardino Historical Society, a renowned educator, Columnist, and Earp Historian focusing on Southern California. Wyatt and his family came west by wagon in 1864. For the next 65 years, he would be in and out of California, finding it a safe haven, before, during and after his turbulent Tombstone days. Wyatt drove freight wagons, refereed boxing matches, ran card games, and mined for gold and oil.  In later years, Wyatt became good friends with cowboy movie stars William S. Hart and Tom Mix who were both pallbearers at Wyatt's funeral here in Los Angeles. There are many wonderful stories to be told about Wyatt and his family in Southern California.
+<p>
+Hear these two insightful authors for one night only, in the magnificent living room of Bill Hart's 10,000 square foot Mansion, high atop the hill in Hart Park. There is nothing like the experience of hearing true stories about a real west icon while sitting among the western paintings and collections of <em>William S. Hart</em>, the granddaddy of western movie heroes and real life friend of Wyatt Earp.
 </div>
 <!--------------------------------------------------------------------------------------- -->
 <div id="footside">
 <h3>Remember, seating is limited, so get your tickets 
 <a href="http://cowboyfestival.org/venues/hart-mansion/" target="_blank">HERE.</h3>
-<video loop autoplay muted poster="Event_Pages/cowboyfest2016/CowboyFestival2016.png">
-<source src="cowboyfest2016/CowboyFestival2016lg.m4v" type="video/mp4"
-Hart Mansion events are Apr. 22-23!
+Hart Mansion events are Apr. 21-22!
 </video>
 </a>
 </div>
