--- a/index.html
+++ b/index.html
@@ -259,50 +259,70 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 -->
                                 <h2>2017 Calendar of Events</h2>
-                                <h4>Stay tuned for all our upcoming events in the new year!</h4>
-                                <!--
                                 <h3>Click on links as details become available</h3>
-                                -->
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
-                                    <!--
                                     <tr>
-                                      <td id="EventDate">Saturday &amp; Sunday, Nov. 26-27, 10am-4pm</td>
+                                      <td id="EventDate">Friday &amp; Saturday, Apr. 21-22</td>
                                       <td id="Event">
-                                      <a href="Event_Pages/2016HartHolidayBoutique.png" rel="lightbox[boutique]">
-                                      Hart Holiday Boutique &amp; Craft Fair
+                                      <a href="Event_Pages/cowboyfest.html">
+                                      Cowboy Festival events at The Hart
                                       </a>
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Saturday, Dec. 3<sup>rd</sup></td>
+                                      <td id="EventDate">Saturday, Aug. 12<sup>th</sup></td>
                                       <td id="Event">
-                                      <a href="Event_Pages/2016CowboysAndCarols.jpg" rel="lightbox[carols]">
+                                      Silents Under the Stars
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday &amp; Sunday, Sept. 30<sup>th</sup>
+                                            &amp; Oct. 1<sup>st</sup></td>
+                                      <td id="Event">
+                                      Bow Wows &amp; Meows pet fair
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday, Dec. 2<sup>nd</sup></td>
+                                      <td id="Event">
                                       Cowboys &amp; Carols
-                                      </a>
                                       </td>
                                     </tr>
-                                    -->
                                     <tr>
                                     <td colspan="2">
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<p align="center">
-<img src="images/HappyHolidays.png"/>
+<a href="Event_Pages/cowboyfest.html">
+<h2 align="center">Cowboy Festival events at The Hart
+<img align="center" src="Event_Pages/cowboyfest2017/cowboyfest2017.jpg"/>
+</h2>
+</a>
 </p>
 </a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<a href="https://www.facebook.com/media/set/?set=a.1189767147754893.1073741832.171859949545623&type=1&l=1b7f3c7d6d" target="_blank">
-<h4 align="center"?>
-Click here for photos of the Bow Wows and Meow's pet fair!
-</h4>
-<p align="center">
-<img src="images/2016bowwows.png"/>
-</p>
-</a>
+<h3 align="center"?>
+Click below for photos of the <i>Cowboys and Carols</i> holidaytime celebration of Bill Hart's birthday<br>
+<a href=        "Event_Pages/cowboyscarols2016/Hart-0.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-0.jpg" />
+<a href=        "Event_Pages/cowboyscarols2016/Hart-1.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-1.jpg" />
+<a href=        "Event_Pages/cowboyscarols2016/Hart-2.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-2.jpg" />
+<a href=        "Event_Pages/cowboyscarols2016/Hart-3.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-3.jpg" />
+<a href=        "Event_Pages/cowboyscarols2016/Hart-4.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-4.jpg" />
+<a href=        "Event_Pages/cowboyscarols2016/Hart-6.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-6.jpg" />
+<a href=        "Event_Pages/cowboyscarols2016/Hart-8.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-8.jpg" />
+<a href=        "Event_Pages/cowboyscarols2016/Hart-9.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-9.jpg" />
+</h3>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
