--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Friday &amp; Saturday, Apr. 21-22</td>
+                                      <td id="EventDate">Friday &amp; Saturday, 
+                                            Apr. 21<sup>st</sup> &amp; 22<sup>nd</sup></td>
                                       <td id="Event">
                                       <a href="Event_Pages/cowboyfest.html">
                                       Cowboy Festival events at The Hart
@@ -282,7 +283,20 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       <td id="EventDate">Saturday &amp; Sunday, Sept. 30<sup>th</sup>
                                             &amp; Oct. 1<sup>st</sup></td>
                                       <td id="Event">
+                                      Pow Wow Native American Celebration
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Sunday, Oct. 8<sup>th</sup> (tentative)</td>
+                                      <td id="Event">
                                       Bow Wows &amp; Meows pet fair
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday &amp; 
+                                        Sunday, Nov. 25<sup>th</sup> &amp; 26<sup>th</sup></td>
+                                      <td id="Event">
+                                      Hart Holiday Boutique
                                       </td>
                                     </tr>
                                     <tr>
