Updated website with park events

--- a/Event_Pages/cowboyfest.html
+++ b/Event_Pages/cowboyfest.html
@@ -99,9 +99,16 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                           Santa Clarita Cowboy Festival</font></p>
                     </div>
                   </td>
+					<TD width="50" valign="bottom">
+                    <a href="../index.html">
+					<IMG border="0" src="../images/spacer.gif" width="50" height="40">
+                    </a>
+					</TD>
+                  <!--
                   <td valign="bottom" width="50"> <img
                       src="../images/spacer.gif" border="0" height="40"
                       width="2"> </td>
+                    -->
                 </tr>
               </tbody>
             </table>
