--- a/index.html
+++ b/index.html
@@ -200,6 +200,38 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                             border="0" height="24"
                                             width="313"></font></b></i></td>
                                 </tr>
+                                <tr>
+                                <td>
+<h3 align="center"?>
+Click below for photos of the <i>Cowboys and Carols</i> holidaytime celebration of Bill Hart's birthday<br>
+<a href=        "Event_Pages/cowboyscarols2016/Hart-0.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-0.jpg" /></a>
+<a href=        "Event_Pages/cowboyscarols2016/Hart-1.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-1.jpg" /></a>
+<a href=        "Event_Pages/cowboyscarols2016/Hart-2.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-2.jpg" /></a>
+<a href=        "Event_Pages/cowboyscarols2016/Hart-3.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-3.jpg" /></a>
+<a href=        "Event_Pages/cowboyscarols2016/Hart-4.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-4.jpg" /></a>
+<a href=        "Event_Pages/cowboyscarols2016/Hart-6.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-6.jpg" /></a>
+<a href=        "Event_Pages/cowboyscarols2016/Hart-8.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-8.jpg" /></a>
+<a href=        "Event_Pages/cowboyscarols2016/Hart-9.jpg" rel="lightbox[carols]">
+<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-9.jpg" /></a>
+</h3>
+<sm>Photos courtesy of Museum Volunteer Coordinator David Paul</sm>
+                                </td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                        <font color="#FFCC00" size="6">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></font></b></i></td>
+                                </tr>
 <!--
                                 <tr>
                                   <td style="vertical-align: top;">
@@ -258,6 +290,14 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 -->
+<a href="Event_Pages/cowboyfest.html">
+<h2 align="center">Cowboy Festival events at The Hart
+<img align="center" src="Event_Pages/cowboyfest2017/cowboyfest2017.jpg"/>
+</h2>
+</a>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2017 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
                                 <table style="text-align: left; width:
@@ -274,9 +314,57 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       </td>
                                     </tr>
                                     <tr>
+                                      <td id="EventDate">Saturday &amp; Sunday, 
+                                            May 6<sup>th</sup> &amp; 7<sup>th</sup> 10am&ndash;8pm</td>
+                                      <td id="Event">
+                                      Pacific Islander Festival
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday &amp; Sunday, 
+                                            May 20<sup>th</sup> &amp; 21<sup>st</sup> 10am&ndash;4pm</td>
+                                      <td id="Event">
+                                      Artisan Row Home Arts &amp; Crafts Show
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday, June 3<sup>rd</sup></td>
+                                      <td id="Event">
+                                      "Hart of the West" Music in the Park
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Sunday, June 25<sup>th</sup></td>
+                                      <td id="Event">
+                                      "Saxtravaganza" all-saxophone chamber ensemble
+                                      </td>
+                                    </tr>
+                                    <tr>
                                       <td id="EventDate">Saturday, Aug. 12<sup>th</sup></td>
                                       <td id="Event">
                                       Silents Under the Stars
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                      Fridays at dusk &mdash; 
+                                      June 16<sup>th</sup>, 
+                                      June 30<sup>th</sup>, 
+                                      July 14<sup>th</sup>, 
+                                      July 28<sup>th</sup>, 
+                                      Aug. 18<sup>th</sup>
+                                      </td>
+                                      <td id="Event">
+                                      Summer Movies in the Park Series
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday &amp; Sunday, 
+                                      Sept. 9<sup>th</sup> &amp; 10<sup>th</sup></td>
+                                      <td id="Event">
+                                      <a target="_blank" href="http://www.hdmmrc.com/events.php">
+                                      High Desert Modular Model Train Show
+                                      </a><span><img src="images/ExternalLink.png"/></span>
                                       </td>
                                     </tr>
                                     <tr>
@@ -289,12 +377,34 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <tr>
                                       <td id="EventDate">Sunday, Oct. 8<sup>th</sup> (tentative)</td>
                                       <td id="Event">
+                                      <a target="_blank" href="http://www.bowwowsandmeows.org/">
                                       Bow Wows &amp; Meows pet fair
+                                      <span><img src="images/ExternalLink.png"/></span></a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                      Saturday &amp; Saturday Oct. 14<sup>th</sup> &amp; 15<sup>th</sup>
+                                      </td>
+                                      <td id="Event">
+                                      <a target="_blank" href="http://www.santaclaritaartists.org">
+                                      SCV Artists Association Arts Classic
+                                      <span><img src="images/ExternalLink.png"/></span></a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                      Saturday Nov. 4<sup>th</sup>
+                                      </td>
+                                      <td id="Event">
+                                      <a target="_blank" href="http://www.scvrs.homestead.com/roseshow.html">
+                                      SCV Rose Society annual rose show
+                                      <span><img src="images/ExternalLink.png"/></span></a>
                                       </td>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">Saturday &amp; 
-                                        Sunday, Nov. 25<sup>th</sup> &amp; 26<sup>th</sup></td>
+                                        Sunday, Nov. 25<sup>th</sup>  &amp; 26<sup>th</sup></td>
                                       <td id="Event">
                                       Hart Holiday Boutique
                                       </td>
@@ -307,36 +417,8 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     </tr>
                                     <tr>
                                     <td colspan="2">
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<a href="Event_Pages/cowboyfest.html">
-<h2 align="center">Cowboy Festival events at The Hart
-<img align="center" src="Event_Pages/cowboyfest2017/cowboyfest2017.jpg"/>
-</h2>
-</a>
-</p>
-</a>
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<h3 align="center"?>
-Click below for photos of the <i>Cowboys and Carols</i> holidaytime celebration of Bill Hart's birthday<br>
-<a href=        "Event_Pages/cowboyscarols2016/Hart-0.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-0.jpg" />
-<a href=        "Event_Pages/cowboyscarols2016/Hart-1.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-1.jpg" />
-<a href=        "Event_Pages/cowboyscarols2016/Hart-2.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-2.jpg" />
-<a href=        "Event_Pages/cowboyscarols2016/Hart-3.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-3.jpg" />
-<a href=        "Event_Pages/cowboyscarols2016/Hart-4.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-4.jpg" />
-<a href=        "Event_Pages/cowboyscarols2016/Hart-6.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-6.jpg" />
-<a href=        "Event_Pages/cowboyscarols2016/Hart-8.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-8.jpg" />
-<a href=        "Event_Pages/cowboyscarols2016/Hart-9.jpg" rel="lightbox[carols]">
-<img src="Event_Pages/cowboyscarols2016/thumbs/Hart-9.jpg" />
-</h3>
+                                    <h3 align="center">Join in the fun by<br><a href="The_Friends/membership.html">
+                                    joining The Friends of Hart Park</a>!</h3>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
@@ -349,16 +431,7 @@ Click below for photos of the <i>Cowboys and Carols</i> holidaytime celebration 
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                    <h3 align="center">Join in the fun by<br><a href="The_Friends/membership.html">
-                                    joining The Friends of Hart Park</a>!</h3></td>
-                                        <!--
-                                      <td id="EventDate">Saturday, Dec. 5<sup>th</sup></td>
-                                      <td id="Event">
-                                      <a href="Event_Pages/CowboysCarols2015.png" rel="lightbox[carols]">
-                                      Cowboys &amp; Carols
-                                      </a>
-                                      </td>
-                                      -->
+                                    </td>
                                     </tr>
                                   </tbody>
                                 </table>
