--- a/index.html
+++ b/index.html
@@ -317,7 +317,9 @@ Click below for photos of the <i>Cowboys and Carols</i> holidaytime celebration 
                                       <td id="EventDate">Saturday &amp; Sunday, 
                                             May 6<sup>th</sup> &amp; 7<sup>th</sup> 10am&ndash;8pm</td>
                                       <td id="Event">
+                                        <a href="Event_Pages/2017polyfest.jpg" rel="lightbox[pacific]">
                                       Pacific Islander Festival
+                                        </a>
                                       </td>
                                     </tr>
                                     <tr>
@@ -340,12 +342,6 @@ Click below for photos of the <i>Cowboys and Carols</i> holidaytime celebration 
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Saturday, Jul. 29<sup>th</sup></td>
-                                      <td id="Event">
-                                      Silents Under the Stars
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">
                                       Fridays at dusk &mdash; 
                                       June 16<sup>th</sup>, 
@@ -356,6 +352,12 @@ Click below for photos of the <i>Cowboys and Carols</i> holidaytime celebration 
                                       </td>
                                       <td id="Event">
                                       Summer Movies in the Park Series
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday, Jul. 29<sup>th</sup></td>
+                                      <td id="Event">
+                                      Silents Under the Stars
                                       </td>
                                     </tr>
                                     <tr>
